--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "accounts": "./bin/accounts-report",
-    "keys": "./bin/keys-report"
+    "keys": "./bin/keys-report",
+    "collect-keys": "find ~ -type f -name '*.testnet.json' -exec cp '{}' ~/.near-credentials ';'"
   },
   "keywords": [],
   "author": "",
