--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.0.0",
+    "chardet": "^1.1.0",
     "got": "^11.1.3",
     "near-api-js": "^0.25.1",
     "table": "^5.4.6"
